# IDcardRecognization

./: README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/samychen/gracefulwrapper/idcardrecognization/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: card.traineddata  card2.traineddata
app/src/main/cpp/: common.h  native-lib.cpp  utils.cpp  utils.h
app/src/main/java/com/samychen/gracefulwrapper/idcardrecognization/: ImageUtils.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/samychen/gracefulwrapper/idcardrecognization/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
